name:              Monaba
version:           1.1.5
cabal-version:     >= 1.8
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    exposed-modules: Application
                     Foundation
                     Import
                     Model
                     ModelTypes
                     Settings
                     Settings.StaticFiles
                     Settings.Development
                     Handler.Home
                     Handler.Help
                     Handler.Thread
                     Handler.Board
                     Handler.Edit
                     Handler.Live
                     Handler.Posting
                     Handler.Delete
                     Handler.Admin
                     Handler.Admin.Ban
                     Handler.Admin.Hellban
                     Handler.Admin.Board
                     Handler.Admin.Config
                     Handler.Admin.Group
                     Handler.Admin.User
                     Handler.Admin.Search
                     Handler.Admin.Modlog
                     Handler.Api
                     Handler.Captcha
                     Handler.Settings
                     Handler.EventSource
                     Utils.YobaMarkup
                     Utils.SillyCaptcha

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -O0
    else
        ghc-options:   -Wall -O1

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable

    build-depends: base                          >= 4.2        && < 4.8
                 , yesod                         == 1.2.4
                 , yesod-core                    == 1.2.6.6
                 , yesod-auth                    >= 1.2        && < 1.3
                 , yesod-form                    >= 1.3        && < 1.4
                 , yesod-static                  >= 1.2        && < 1.3
                 , yesod-routes                  >= 1.2        && < 1.3
                 , yesod-persistent              >= 1.2        && < 1.3
                 , persistent                    >= 1.2        && < 1.3
                 , persistent-postgresql         >= 1.2        && < 1.3
                 , persistent-template           >= 1.2        && < 1.3
                 , blaze-markup                  >= 0.5        && < 0.7
                 , blaze-html                    >= 0.6        && < 0.8
                 , blaze-builder
                 , text                          >= 0.11       && < 1.2
                 , yaml                          >= 0.8        && < 0.9
                 , hjsmin                        >= 0.1        && < 0.2
                 , hamlet                        >= 1.1        && < 1.2
                 , shakespeare-css               >= 1.0        && < 1.1
                 , shakespeare-js                >= 1.0.2      && < 1.3
                 , shakespeare-text              >= 1.0        && < 1.1
                 , wai                           >= 1.4        && < 2.0
                 , wai-extra                     >= 1.3        && < 2.0
                 , wai-eventsource               >= 1.3        && < 2.0
                 , bytestring                    >= 0.9        && < 0.11
                 , base64-bytestring
                 , monad-control                 >= 0.3        && < 0.4
                 , monad-logger                  == 0.3.2.0
                 , fast-logger                   >= 0.3        && < 2.0
                 , http-types                    >= 0.8.0      && < 0.9.9
                 , http-conduit                  >= 1.9        && < 2.0
                 , conduit                       >= 1.0
                 , array                         >= 0.4        && < 0.5.1
                 , old-locale                    >= 1.0.0.5    && < 1.0.0.6
                 , utf8-string                   >= 0.3.7      && < 0.4
                 , time                          >= 1.4        && < 1.5
                 , unix-time                     >= 0.2        && < 0.3
                 , unix                          >= 2.6        && < 2.8
                 , filepath                      >= 1.3        && < 1.4
                 , directory                     >= 1.1        && < 1.3
                 , nano-md5                      >= 0.1.2      && < 0.2.0
                 , aeson
                 , gd                            >= 3000.7.3   && < 3000.8
                 , process                       >= 1.1        && < 1.3
                 , MissingH                      >= 1.2        && < 1.3
                 , split                         >= 0.2.2      && < 0.3.0
                 , random                        >= 1.0.1.1    && < 1.1
                 , esqueleto                     >= 1.3.2      && < 1.3.5              
                 , containers                    >= 0.5        && < 0.6 
                 , hs-GeoIP                      >= 0.3        && < 0.4
                 , tagsoup                       >= 0.13       && < 0.14
                 , parsec                        >= 3.1.3      && < 3.2.0
                 , warp                          >= 1.3        && < 2.0
                 , template-haskell
                 , data-default
                 , resourcet
                 , stm

executable         Monaba
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base
                     , Monaba
                     , yesod


    ghc-options:       -threaded -O1

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           main.hs
    hs-source-dirs:    tests
    ghc-options:       -Wall

    build-depends: base
                 , Monaba
                 , yesod-test >= 1.2 && < 1.3
                 , yesod-core
                 , yesod
                 , persistent
                 , persistent-postgresql
                 , resourcet
                 , monad-logger
                 , transformers
                 , hspec
